syntax = "proto3";

option java_multiple_files = true;
option java_package = "ovaphlow.himawari.grpc";
option java_outer_classname = "TestProto";

package test;

service Test {
  rpc Save (SaveRequest) returns (SaveReply) {}

  rpc list (TestRequest) returns (TestReply) {}

  rpc get (TestRequest) returns (TestReply) {}
}

message TestRequest { string data = 1; }

message TestReply { string data = 1; }

message SaveRequest {
  string name = 1;
}

message SaveReply {
  string message = 1;
}